Only call pthread_key_create once in __CFTSDInitialize

We were calling pthread_key_create more than PTHREAD_KEYS_MAX times
(1024 on the version of Linux I tested with). It should only need to be
called once.

Fixes https://bugs.swift.org/browse/SR-9241